
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct udphdr {void* len; scalar_t__ check; void* dest; void* source; } ;


 void* htons (int) ;
 int memcpy (void*,char*,int) ;

void setup_udp_header(struct udphdr *udph)
{
 udph->source = htons(5678);
 udph->dest = htons(11211);
 udph->check = 0;
 memcpy((void *)udph + sizeof(struct udphdr), "\x00\x01\x00\x00\x00\x01\x00\x00stats\r\n", 15);
 udph->len=htons(sizeof(struct udphdr) + 15);
}
