; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_44264.c_setup_udp_header.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_44264.c_setup_udp_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.udphdr = type { i8*, i64, i8*, i8* }

@.str = private unnamed_addr constant [16 x i8] c"\00\01\00\00\00\01\00\00stats\0D\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setup_udp_header(%struct.udphdr* %0) #0 {
  %2 = alloca %struct.udphdr*, align 8
  store %struct.udphdr* %0, %struct.udphdr** %2, align 8
  %3 = call i8* @htons(i32 5678)
  %4 = load %struct.udphdr*, %struct.udphdr** %2, align 8
  %5 = getelementptr inbounds %struct.udphdr, %struct.udphdr* %4, i32 0, i32 3
  store i8* %3, i8** %5, align 8
  %6 = call i8* @htons(i32 11211)
  %7 = load %struct.udphdr*, %struct.udphdr** %2, align 8
  %8 = getelementptr inbounds %struct.udphdr, %struct.udphdr* %7, i32 0, i32 2
  store i8* %6, i8** %8, align 8
  %9 = load %struct.udphdr*, %struct.udphdr** %2, align 8
  %10 = getelementptr inbounds %struct.udphdr, %struct.udphdr* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.udphdr*, %struct.udphdr** %2, align 8
  %12 = bitcast %struct.udphdr* %11 to i8*
  %13 = getelementptr i8, i8* %12, i64 32
  %14 = call i32 @memcpy(i8* %13, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 15)
  %15 = call i8* @htons(i32 47)
  %16 = load %struct.udphdr*, %struct.udphdr** %2, align 8
  %17 = getelementptr inbounds %struct.udphdr, %struct.udphdr* %16, i32 0, i32 0
  store i8* %15, i8** %17, align 8
  ret void
}

declare dso_local i8* @htons(i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
